# tictactrains-engine

./: .gitignore  CMakeLists.txt  README.md
src/: bitutil.c  bitutil.h  board.c  board.h  board_pred.c  board_pred.h  config.c  config.h  debug.c  debug.h  defs.h  generate_scorer_lookup_table.c  mctn.c  mctn.h  mctn_list.c  mctn_list.h  mctnlist.c  mctnlist.h  mcts.c  mcts.h  random.c  random.h  rules.c  rules.h  scorer.c  scorer.h  scorer_lookup_table.c  scorer_lookup_table.h  scorer_lookup_test.c  scorer_test.c  ttt.c  ttt.conf  ttt.h  types.h  util.c  util.h  vector.c  vector.h
